--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,24 @@
-# IntelliProof .gitignore
-
-# Node.js
-node_modules/
-.env
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# React/Vite/Next
-/build
-/dist
-/.next
+node_modules
+dist
+dist-ssr
+*.local
 
-# Python
-__pycache__/
-*.py[cod]
-*.egg
-*.egg-info/
-*.pyo
-venv/
-.env
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-
-# FastAPI
-instance/
-*.db
-
-# Testing
-coverage/
-htmlcov/
-.pytest_cache/
-.jest/
-
-# IDEs and OS
-.vscode/
-.idea/
-*.swp
-Thumbs.db
-.DS_Store
-
-# Logs and artifacts
-logs/
-*.log
-
-# Jupyter / Experiments
-.ipynb_checkpoints/
-
-# Exports
-*.pdf
-*.md.backup
-export/
-
-# Static Builds
-frontend/static/build/
-frontend/.turbo/
-frontend/.parcel-cache/
-
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
