add changes to gitignore in the main branch

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,47 @@ dist-ssr
 backend/.env
 backend/.env.*
 !.backend/.env.example
+
+backend/.env
+backend/.env.*
+!.backend/.env.example
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Dependencies
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Environment files
+.env
+.env.local
+.env.*
+!.env.example
+backend/.env
+backend/.env.*
+!.backend/.env.example
+
+# Python specific
+backend/venv/
+backend/__pycache__/
+*.py[cod]
+*$py.class
