--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,32 @@ backend/venv/
 backend/__pycache__/
 *.py[cod]
 *$py.class
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
