--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reactflow/background": "^11.3.14",
+    "@reactflow/node-resizer": "^2.2.14",
     "@supabase/supabase-js": "^2.49.9",
     "autoprefixer": "^10.4.17",
     "next": "14.1.0",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.1"
+    "react-resizable-panels": "^3.0.2",
+    "reactflow": "^11.11.4",
+    "tailwindcss": "^3.4.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
