stability in graph creation, modificatioon, need to work on export, navbar edit, evience backend

--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   "dependencies": {
     "@reactflow/background": "^11.3.14",
     "@reactflow/node-resizer": "^2.2.14",
-    "@supabase/supabase-js": "^2.49.9",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@supabase/supabase-js": "^2.50.0",
+    "@types/react-redux": "^7.1.34",
     "autoprefixer": "^10.4.17",
+    "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
+    "jwt-decode": "^4.0.0",
     "next": "14.1.0",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
     "react-resizable-panels": "^3.0.2",
     "reactflow": "^11.11.4",
     "tailwindcss": "^3.4.1",
