--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@reactflow/background": "^11.3.14",
     "@reactflow/node-resizer": "^2.2.14",
     "@reduxjs/toolkit": "^2.8.2",
@@ -17,6 +18,7 @@
     "autoprefixer": "^10.4.17",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "formidable": "^3.5.4",
     "jwt-decode": "^4.0.0",
     "next": "14.1.0",
     "postcss": "^8.4.35",
@@ -29,6 +31,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
