--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "formidable": "^3.5.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "next": "14.1.0",
     "postcss": "^8.4.35",
