Edited AI function UI, Added Auto Layout Functionality, Documented API and ReadME

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@reactflow/node-resizer": "^2.2.14",
     "@reduxjs/toolkit": "^2.8.2",
     "@supabase/supabase-js": "^2.50.0",
+    "@types/dagre": "^0.7.53",
     "@types/react-redux": "^7.1.34",
     "autoprefixer": "^10.4.17",
     "axios": "^1.9.0",
+    "dagre": "^0.8.5",
     "date-fns": "^4.1.0",
     "formidable": "^3.5.4",
     "html2canvas": "^1.4.1",
