--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,8 +5,10 @@ passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 supabase==2.0.3
 python-dotenv==1.0.0
-pydantic==2.4.2
+pydantic==2.5.0
 email-validator==2.1.0.post1 
-openai==1.93.3 
-langchain==0.1.13
-langchain-community>=0.0.29,<0.1 
+openai==1.3.7
+langchain==0.1.0
+langchain-community==0.0.10
+langchain-core==0.1.10
+langsmith>=0.0.77 
