--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,7 +8,4 @@ python-dotenv==1.0.0
 pydantic==2.5.0
 email-validator==2.1.0.post1 
 openai==1.3.7
-langchain==0.1.0
-langchain-community==0.0.10
-langchain-core==0.1.10
-langsmith>=0.0.77 
+pydantic-settings==2.1.0 
