--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,4 +8,6 @@ python-dotenv==1.0.0
 pydantic==2.5.0
 email-validator==2.1.0.post1 
 openai==1.3.7
-pydantic-settings==2.1.0 
+pydantic-settings==2.1.0
+requests==2.31.0
+PyMuPDF==1.23.8 
