--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,4 +10,5 @@ email-validator==2.1.0.post1
 openai==1.3.7
 pydantic-settings==2.1.0
 requests==2.31.0
-PyMuPDF==1.23.8 
+PyMuPDF==1.23.8
+PyYAML==6.0.1 
